--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ body {
 }
 
 .section-title {
-    font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 42px;
@@ -83,10 +83,20 @@ body {
 }
 
 .pre-title {
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 1.36;
-    text-transform: uppercase;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.pre-title::before {
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: currentColor;
 }
 
 .btn {
@@ -120,8 +130,13 @@ body {
   display: flex;
   align-items: center;
 }
+
 .header-logo {
   margin-right: 131px;
+}
+
+.logo-icon {
+  fill: #303030;
 }
 
 .header-list {
@@ -159,9 +174,9 @@ body {
 
 /*-----------------HERO----------------*/
 
-.hero {
+/* .hero {
     background-color: #3d3e45;
-}
+} */
 
 .hero-container {
   display: flex;
@@ -173,6 +188,14 @@ body {
 
 .hero-wrap {
   background-color: #3d3e45;
+  background-image: linear-gradient(
+      rgba(25, 28, 38, 0.2),
+      rgba(25, 28, 38, 0.2)
+    ),
+    url(../img/hero-bg.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   padding: 272px 100px 208px 100px;
   flex-grow: 1;
 }
@@ -203,6 +226,28 @@ body {
   letter-spacing: 0.05em;
   color: var(--main-title-color);
   margin-bottom: 20px;
+  display: flex;
+  align-items: baseline;
+}
+
+.hero-title:hover::before {
+  color: aqua;
+  background-image: url(../img/barbers-img-2.jpeg);
+}
+
+.hero-title::before {
+  content: '';
+  font-size: 32px;
+  background-image: url(../img/abot-img-2.jpeg);
+  background-size: cover;
+  background-position: top;
+  width: 40px;
+  height: 40px;
+}
+
+.hero-title::after {
+  content: '!';
+  color: tomato;
 }
 
 .hero-after-title {
@@ -262,7 +307,13 @@ body {
 /*-----------------PRICES----------------*/
 
 .prices {
-  background-color: #303030;
+  background-color: #111319;
+  background-image: url(../img/prices-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 .prices-pre-title {
@@ -281,14 +332,38 @@ body {
 }
 
 .prices-list {
-  border: 1px solid #ffffff;
   padding: 30px 20px;
   width: calc((100% - 30px) / 2);
+}
+
+.prices-list:first-child {
+  background-image: linear-gradient(
+    180deg,
+    #171a24 0%,
+    rgba(23, 26, 36, 0.2) 100%
+  );
+}
+
+.prices-list:last-child {
+  background-image: linear-gradient(
+    180deg,
+    #090b13 0%,
+    rgba(9, 11, 19, 0.2) 100%
+  );
 }
 
 .prices-item {
   display: flex;
   justify-content: space-between;
+  gap: 12px;
+  align-items: baseline;
+}
+
+.prices-item::after {
+  content: '';
+  flex-grow: 1;
+  height: 1px;
+  background-color: rgba(157, 164, 189, 0.12);
 }
 
 .prices-item + .prices-item {
@@ -309,19 +384,42 @@ body {
   margin-top: 44px;
 }
 
+.prices-item-text:last-child {
+  order: 1;
+}
+
 /*-----------------BENEFITS----------------*/
 
-/* .benefits {
+.benefits-container {
+  display: flex;
+  padding-left: 100px;
+}
+
+.benefits-wrap {
+  max-width: 500px;
+  padding-top: 9px;
 }
 
 .benefits-list {
-} */
+  display: flex;
+  width: 370px;
+  flex-wrap: wrap;
+  margin-right: 130px;
+}
 
 .benefits-item {
   width: 170px;
   height: 133px;
   border: 1px solid #000000;
   padding: 20px 24px;
+}
+
+.benefits-item:nth-child(odd) {
+  margin-right: 30px;
+}
+
+.benefits-item:nth-child(even) {
+  margin-top: 30px;
 }
 
 .benefits-item span {
@@ -333,6 +431,16 @@ body {
   color: #303030;
   display: block;
   margin-bottom: 6px;
+}
+
+.benefits-item span::after {
+  content: '+';
+  font-weight: 600;
+  font-size: 16px;
+  line-height: calc(22 / 16);
+  text-align: center;
+  color: var(--accent-color);
+  vertical-align: top;
 }
 
 .benefits-item-text {
@@ -351,6 +459,13 @@ body {
 .benefits-title {
   color: #303030;
   margin-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.benefits-title::before {
+  content: '?';
+  transform: rotate(-180deg);
 }
 
 .benefits-after-title {
@@ -403,6 +518,34 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+  margin-bottom: 30px;
+}
+
+.barbers-soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.barbers-soc-item {
+  width: 44px;
+  height: 44px;
+}
+.barbers-soc-link {
+  width: 100%;
+  height: 100%;
+  background: tomato;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #ffffff;
+}
+
+.barbers-soc-link:hover,
+.barbers-soc-link:focus {
+  background-color: teal;
+  fill: violet;
 }
 
 /*-----------------GALLERY----------------*/
@@ -434,8 +577,24 @@ body {
 
 /*-----------------CONTACTS----------------*/
 
+.contact-wrap {
+  background-color: #191c26;
+  background-image: url(../img/contacts-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: calc(50% - 15px) 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.contact-wrap > .container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .contacts {
-  background-color: #303030;
+  width: calc(50% - 15px);
+  padding-left: 100px;
 }
 
 .contacts-title {
