--- a/css/styles.css
+++ b/css/styles.css
@@ -111,12 +111,19 @@ body {
   border: 1px solid #ff6c00;
   border-radius: 25px;
   background-color: transparent;
+  transition: background-color 200ms linear, color 200ms linear;
+}
+
+.btn:hover {
+  background-color: var(--accent-color);
+  color: var(--main-btn-color);
 }
 
 /*-----------------HEADER----------------*/
 
 .header {
     background-color: gray;
+    width: 100%;
     padding-top: 32px;
     padding-bottom: 32px;
 }
@@ -154,6 +161,7 @@ body {
   line-height: 1.33;
   letter-spacing: 0.1em;
   color: var(--main-title-color);
+  transition: color 200ms linear;
 }
 
 .header-link:hover,
@@ -182,8 +190,27 @@ body {
   display: flex;
 }
 
-.hero-list {
+.hero-soc {
   width: 100px;
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 40px;
+  padding-left: 27px;
+}
+
+.hero-list {
+  display: flex;
+  transform: rotate(-90deg) translateY(100%);
+  transform-origin: bottom left;
+  align-items: center;
+  gap: 40px;
+}
+
+.hero-list::before {
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: #303030;
 }
 
 .hero-wrap {
@@ -410,8 +437,8 @@ body {
 .benefits-item {
   width: 170px;
   height: 133px;
-  border: 1px solid #000000;
   padding: 20px 24px;
+  background-color: #f7f7f7;
 }
 
 .benefits-item:nth-child(odd) {
@@ -498,6 +525,30 @@ body {
   width: calc((100% - 60px) / 3);
 }
 
+.barbers-item:hover .barbers-top-text {
+  transform: translateY(0);
+}
+
+.barbers-top-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.barbers-top-text {
+  position: absolute;
+  top: 0;
+  padding: 40px;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.5;
+  background-color: #ff6a0088;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 300ms linear;
+  overflow: auto;
+}
+
 .barbers-wrap {
   padding-top: 30px;
 }
@@ -531,6 +582,7 @@ body {
   width: 44px;
   height: 44px;
 }
+
 .barbers-soc-link {
   width: 100%;
   height: 100%;
@@ -539,7 +591,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  fill: #ffffff;
+  fill: #fff;
+  transition: background-color 200ms linear, fill 200ms linear;
 }
 
 .barbers-soc-link:hover,
@@ -568,7 +621,7 @@ body {
 /*-----------------ONLINE----------------*/
 
 .online {
-  background-color: #303030;
+  width: calc(100% / 2 - 15px);
 }
 
 .online-title {
@@ -647,4 +700,53 @@ body {
   letter-spacing: 0.02em;
   color: #9da4bd;
   margin-bottom: 20px;
+}
+
+/*-----------------MODAL----------------*/
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(85, 85, 85, 0.482);
+  position: fixed;
+  top: 0;
+  transition: opacity 300ms linear, visibility 300ms linear;
+}
+
+.modal {
+  width: 500px;
+  min-height: 500px;
+  background-color: #fff;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(0);
+  transition: transform 300ms linear, border-radius 300ms linear;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) rotate(-360deg);
+  border-radius: 50%;
+}
+
+.modal-close {
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: 1px solid #9da4bd;
+  border-radius: 50%;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
