--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -4,4 +4,5 @@
   --main-btn-color: #ffffff;
   --second-btn-color: #303030;
   --accent-color: #ff6c00;
+  --gradient: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2));
 }
