--- a/sass/layouts/_barbers.scss
+++ b/sass/layouts/_barbers.scss
@@ -10,11 +10,18 @@
 
 .barbers-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .barbers-item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    @include calc(2, 30px);
+  }
+  @media screen and (min-width: 1200px) {
+    @include calc(3, 30px);
+  }
 }
 
 .barbers-top-wrap {
@@ -43,16 +50,17 @@
 .barbers-wrap {
   padding-top: 30px;
 }
+
 .barbers-item-title {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.39;
   text-align: center;
   letter-spacing: 0.02em;
-
   color: #303030;
   margin-bottom: 8px;
 }
+
 .barbers-item-text {
   font-size: 14px;
   line-height: 1.36;
@@ -72,6 +80,7 @@
   width: 44px;
   height: 44px;
 }
+
 .barbers-soc-link {
   width: 100%;
   height: 100%;
@@ -91,6 +100,7 @@
 .barbers-soc-link:hover {
   background-color: teal;
 }
+
 .barbers-soc-link:hover .barbers-soc-icon {
   fill: violet;
 }
