--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -17,16 +17,24 @@
 }
 
 .logo__icon {
-  fill: #303030;
+  fill: #ffffff;
+   @media screen and (min-width: 768px) {
+    fill: #303030;
+  }
 }
 
 .menu {
-  display: flex;
+  display: none;
   gap: 30px;
 }
 
 .header__connect {
   margin-left: auto;
+  display: none;
+  @media screen and (min-width: 479px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .menu__link,
@@ -48,4 +56,93 @@
 
 .connect__btn {
   margin-left: 43px;
+}
+
+.menu-open {
+  margin-left: auto;
+    @media screen and (min-width: 478px) {
+      display: none;
+  }
+}
+
+.mob-menu {
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  top: 0;
+  position: fixed;
+  z-index: 1;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  > .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+  }
+}
+
+.menu-close {
+  margin-left: auto;
+  display: block;
+  margin-bottom: 30px;
+}
+.mob-menu-list {
+  margin-bottom: 32px;
+}
+
+.mob-menu-list__item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mob-menu-list__link {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: calc(25 / 18);
+  letter-spacing: 0.1em;
+  color: #303030;
+}
+
+.mob-connect {
+  margin-bottom: 64px;
+}
+
+.mob-connect__tel {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: calc(25 / 18);
+  letter-spacing: 0.1em;
+  color: #303030;
+}
+
+.mob-connect__btn {
+  display: block;
+  margin-top: 24px;
+}
+
+.mob-soc {
+  padding-left: 100px;
+  position: relative;
+}
+
+.mob-soc::before {
+  position: absolute;
+  left: 0;
+  content: '';
+  width: 60px;
+  height: 1px;
+  background-color: #303030;
+  top: 9px;
+}
+
+.mob-soc__item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.mob-soc__link {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(19 / 14);
+  letter-spacing: 0.2em;
+  color: #303030;
 }
