--- a/sass/layouts/_prices.scss
+++ b/sass/layouts/_prices.scss
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .prices-list {
   padding: 30px 20px;
   width: calc((100% - 30px) / 2);
@@ -47,7 +48,7 @@
   gap: 12px;
   align-items: baseline;
   &::after {
-    content: "";
+    content: '';
     flex-grow: 1;
     height: 1px;
     background-color: rgba(157, 164, 189, 0.12);
@@ -66,6 +67,7 @@
     order: 1;
   }
 }
+
 .prices-btn {
   color: var(--main-btn-color);
   margin: 0 auto;
